tests/reference/ast-continue_body_if_loop-406ed85.stderr
tokenizer error: Expecting terminating symbol for program
 --> tests/continue_body_if_loop.f:9:8
  |
9 |        STOP 
  |        ^ 
